# football_graphs

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: build.yaml  build_check.yaml  deploy.yaml  lint.yaml  lint_and_test.yaml  terraform_check.yaml  test.yaml
airflow/dags/: football_api_download.py
airflow/tests/: test_football_api_download.py
data_backend/: pyproject.toml
data_backend/src/data_backend/: api.py  aws.py  config.py  db.py  download.py  exceptions.py  handlers.py  models.py  rate_limiter.py  requester.py
data_backend/src/data_backend/database/: connection.py  models.py  requests.py
data_backend/tests/: conftest.py  test_api.py  test_aws.py  test_config.py  test_db.py  test_download.py  test_handlers.py  test_models.py  test_rate_limiter.py  test_requester.py
data_backend/tests/database/: test_connection.py  test_requests.py
footgraph/: pyproject.toml
footgraph/src/footgraph/: __init__.py  download.py  exceptions.py
postgres/: init.sh
scripts/: football_api.py
scripts/football_api/: api.py  config.yaml  download_ongoing.py  football_api.py
scripts/football_api/tests/: test_api.py  test_download_ongoing.py  test_football_api.py
terraform/: backend.tf  minio.tf  outputs.tf  variables.tf  versions.tf
terraform/minio/: main.tf  outputs.tf  variables.tf
terraform/minio/policies/: iceberg_read_policy.json  iceberg_write_policy.json  raw_read_policy.json  raw_write_policy.json
