[project]
name = "football_graphs"
version = "0.1.0"
description = "Football stats and graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-backend",
]

[dependency-groups]
airflow = [
    "apache-airflow==2.10.5",
    "apache-airflow-providers-docker>=4.2.1",
]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["data_backend"]

[tool.uv.sources]
data-backend = { workspace = true }

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "import-untyped"
