[project]
name = "data-backend"
version = "0.3.0"
description = "Data operations"
readme = "README.md"
authors = [
    { name = "wwitkowski", email = "wojciechwitkowski94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.18",
    "psycopg2-binary>=2.9.10",
    "pydantic>=1.10.22",
    "requests>=2.32.3",
    "sqlmodel>=0.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "moto>=5.1.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "import-untyped"

[tool.ruff.lint]
select = ["F", "E", "I"]
